# hacs-sept-2020-demo

./: Cargo.toml  Makefile  Readme.md  index.html  search-index.js  settings.html  source-files.js
abstract_integers/: all.html  enum.Bound.html  enum.ControlFlow.html  enum.GeneratorState.html  enum.Ordering.html  enum.Sign.html  fn.one.html  fn.zero.html  index.html  macro.abstract_int.html  macro.abstract_nat_mod.html  macro.abstract_public.html  macro.abstract_public_modular_integer.html  macro.abstract_public_nat_mod.html  macro.abstract_secret.html  macro.abstract_secret_modular_integer.html  macro.abstract_signed.html  macro.abstract_signed_public_integer.html  macro.abstract_signed_secret_integer.html  macro.abstract_unsigned.html  macro.abstract_unsigned_public_integer.html  macro.abstract_unsigned_secret_integer.html  macro.define_abstract_integer_checked.html  macro.define_refined_modular_integer.html  macro.modular_integer.html  sidebar-items.js  struct.BigInt.html  struct.BigUint.html  struct.ParseIntError.html  struct.Range.html  struct.RangeFrom.html  struct.RangeFull.html  struct.RangeInclusive.html  struct.RangeTo.html  struct.RangeToInclusive.html  trait.Add.html  trait.AddAssign.html  trait.BitAnd.html  trait.BitAndAssign.html  trait.BitOr.html  (+33 more)
chacha20/: all.html  fn.block.html  fn.block_init.html  fn.block_inner.html  fn.chacha.html  fn.quarter_round.html  fn.state_to_bytes.html  index.html  struct.IV.html  struct.Key.html  struct.State.html  struct.StateBytes.html
chacha20_rfc7539/: all.html  fn.block.html  fn.block_init.html  fn.block_inner.html  fn.chacha.html  fn.quarter_round.html  fn.state_to_bytes.html  index.html  struct.IV.html  struct.Key.html  struct.State.html  struct.StateBytes.html
chacha20poly1305/: all.html  fn.decrypt.html  fn.encrypt.html  index.html
chacha20poly1305_rfc7539/: all.html  fn.decrypt.html  fn.encrypt.html  index.html
hacs_sept_2020_demo/: all.html  index.html
hacspec-examples/chacha20-rfc7539/: Cargo.toml  chacha20.rs
hacspec-examples/chacha20-rfc7539/tests/: test_chacha20.rs
hacspec-examples/chacha20poly1305/: Cargo.toml
hacspec-examples/chacha20poly1305/src/: chacha20poly1305.rs
hacspec-examples/chacha20poly1305/tests/: test_chacha20poly1305.rs
hacspec-examples/hacspec-poly1305/: Cargo.toml
hacspec-examples/poly-demo/: Cargo.toml  Hacspec.PolyDemo.fst
hacspec-examples/poly-demo/src/: lib.rs
hacspec-examples/poly-demo/tests/: test_poly.rs
hacspec-examples/poly1305/: Cargo.toml  Hacspec.Poly1305-bug.fst  Hacspec.Poly1305.fst  poly1305.rs
hacspec-examples/poly1305/fstar/: .gitignore  Hacspec.Lib.fst  Hacspec.Poly1305.fst
hacspec-examples/poly1305/tests/: test_poly1305.rs
hacspec_chacha20/: all.html  fn.block.html  fn.block_init.html  fn.block_inner.html  fn.chacha.html  fn.quarter_round.html  (+6 more)
(+733 files in other folders)
