[workspace]
members = [
    "main",
    "hacspec-examples/chacha20",
    "hacspec-examples/poly1305",
    "hacspec-examples/chacha20poly1305",
    "hacspec-examples/chacha20poly1305-rfc7539",
]

default-members = [
    "main",
    "hacspec-examples/chacha20",
    "hacspec-examples/poly1305",
    "hacspec-examples/chacha20poly1305",
    "hacspec-examples/chacha20poly1305-rfc7539",
]
