[package]
name = "chacha20poly1305"
version = "0.1.0"
authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/chacha20poly1305.rs"

[dependencies]
chacha20 = { path = "../chacha20" }
poly1305 = { path = "../poly1305" }
hacspec-lib = { git = "https://github.com/hacspec/hacspec/", branch = "fstar-compiler" }

[dev-dependencies]
hacspec-dev = { git = "https://github.com/hacspec/hacspec/", branch = "fstar-compiler" }

