[package]
name = "poly1305"
version = "0.1.0"
authors = ["Denis Merigoux <denis.merigoux@gmail.com>"]
edition = "2018"

[lib]
path = "poly1305.rs"

[dependencies]
hacspec-lib = { git = "https://github.com/hacspec/hacspec/", branch = "fstar-compiler" }

[dev-dependencies]
hacspec-dev = { git = "https://github.com/hacspec/hacspec/", branch = "fstar-compiler" }
